# QMax

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Option.h  OptionParser.h  QMax  README.md  arf1_nd17corr.xyz  backup.cpp  backup.h  cmake_install.cmake  gtp.xyz  main.cpp  orca.input  orca.input.gbw  orca.input.ges  orca.out  prog.cpp  water.xyz  water_tutorial.xyz
